--- a/index.htm
+++ b/index.htm
@@ -6,8 +6,10 @@
     </head>
     <body>
         <header>
-            <h1>Bandung</h1>
-            <p>Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu kota provinsi tersebut.</p>
+            <div class="jumbotron">
+                <h1>Bandung</h1>
+                <p>Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu kota provinsi tersebut.</p>
+            </div>
             <nav>
                 <ul>
                     <li><a href="#sejarah">Sejarah</a></li>
@@ -19,9 +21,9 @@
 
         <main>
             <div id="content">
-                <article>
+                <article class="card">
                     <h2 id="sejarah">Sejarah</h2>
-                    <img src="assets/image/history.jpg" alt="sejarah" />
+                    <img class="featured-image" src="assets/image/history.jpg" alt="sejarah" />
                     <p>Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya sungai Citarum oleh lava Gunung Tangkuban Parahu yang lalu membentuk telaga. Legenda yang diceritakan oleh orang-orang tua di Bandung mengatakan bahwa nama Bandung
                         diambil dari sebuah kendaraan air yang terdiri dari dua perahu yang diikat berdampingan yang disebut perahu bandung yang digunakan oleh Bupati Bandung, R.A. Wiranatakusumah II, untuk melayari Ci Tarum dalam mencari tempat kedudukan
                         kabupaten yang baru untuk menggantikan ibu kota yang lama di Dayeuhkolot. </p>
@@ -30,9 +32,9 @@
                         segala sesuatu yang berada di alam hidup yaitu di bumi dan atmosfer, baik makhluk hidup maupun benda mati. Sinonim dari banda adalah harta. Indung berarti Ibu atau Bumi, disebut juga sebagai Ibu Pertiwi tempat Banda berada.</p>
                 </article>
 
-                <article>
+                <article class="card">
                     <h2 id="geografis">Geografis</h2>
-                    <img src="assets/image/geografis.jpg" alt="geografis" />
+                    <img class="featured-image" src="assets/image/geografis.jpg" alt="geografis" />
                     <p>Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi wilayahnya bagaikan sebuah mangkok raksasa, secara geografis kota ini terletak di tengah-tengah provinsi Jawa Barat, serta berada pada ketinggian ±768 m di atas permukaan
                         laut, dengan titik tertinggi di berada di sebelah utara dengan ketinggian 1.050 meter di atas permukaan laut dan sebelah selatan merupakan kawasan rendah dengan ketinggian 675 meter di atas permukaan laut.</p>
 
@@ -40,7 +42,7 @@
                         rentan terhadap masalah banjir terutama pada musim hujan.</p>
                 </article>
 
-                <article>
+                <article class="card">
                     <section>
                         <h2>Wisata</h2>
                         <p>Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi tujuan utama dalam menikmati liburan akhir pekan terutama dari masyarakat yang berasal dari Jakarta sekitarnya. Selain menjadi kota wisata belanja, kota Bandung juga
@@ -49,14 +51,14 @@
 
                     <section>
                         <h3>Farm House Lembang</h3>
-                        <img src="assets/image/farm-house.jpg">
+                        <img class="featured-image" src="assets/image/farm-house.jpg">
                         <p>Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi wilayahnya bagaikan sebuah mangkok raksasa,[9] secara geografis kota ini terletak di tengah-tengah provinsi Jawa Barat, serta berada pada ketinggian ±768 m di atas
                             permukaan laut, dengan titik tertinggi di berada di sebelah utara dengan ketinggian 1.050 meter di atas permukaan laut dan sebelah selatan merupakan kawasan rendah dengan ketinggian 675 meter di atas permukaan laut.</p>
                     </section>
 
                     <section>
                         <h3>Observatorium Bosscha</h3>
-                        <img src="assets/image/bosscha.jpg">
+                        <img class="featured-image" src="assets/image/bosscha.jpg">
                         <p>Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss, Schmidt Bimasakti, Refraktor Bamberg, Cassegrain GOTO, dan Teleskop Surya. Refraktor Ganda Zeiss adalah jenis teleskop terbesar untuk meneropong bintang. Benda ini diletakkan
                             pada atap kubah sehingga saat teropong digunakan, atap tersebut harus dibuka. Observatorium Bosscha boleh dikunjungi oleh siapa pun, tanpa tiket. Namun, bagi yang ingin menggunakan teleskop Zeiss, wajib mendaftarkan diri. Untuk
                             instansi atau lembaga pendidikan, diberikan jadwal hari Selasa sampai Jumat. Sementara itu, kunjungan individu dibuka setiap hari Sabtu.
@@ -66,7 +68,7 @@
             </div>
 
             <aside>
-                <article class="profile">
+                <article class="profile card">
                     <header>
                         <h2>Kota Bandung</h2>
                         <p>Kota Kembang Paris van Java</p>
