--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Kota Bandung</title>
         <link rel="stylesheet" href="assets/styles/style.css" />
     </head>
@@ -44,7 +45,7 @@
 
                 <article class="card">
                     <section>
-                        <h2>Wisata</h2>
+                        <h2 id="wisata">Wisata</h2>
                         <p>Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi tujuan utama dalam menikmati liburan akhir pekan terutama dari masyarakat yang berasal dari Jakarta sekitarnya. Selain menjadi kota wisata belanja, kota Bandung juga
                             dikenal dengan sejumlah besar bangunan lama berarsitektur peninggalan Belanda.</p>
                     </section>
