prepare web storage

--- a/calc/index.htm
+++ b/calc/index.htm
@@ -37,6 +37,22 @@
             </div>
         </div>
 
+        <div class="history card">
+            <h2>History</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>First Number</th>
+                        <th>Operator</th>
+                        <th>Angka Kedua</th>
+                        <th>Hasil</th>
+                    </tr>
+                </thead>
+                <tbody id="historylist"></tbody>
+            </table>
+        </div>
+
+        <script src="assets/storage.js"></script>
         <script src="assets/calc.js"></script>
     </body>
 </html>
