--- a/calc/index.htm
+++ b/calc/index.htm
@@ -44,8 +44,8 @@
                     <tr>
                         <th>First Number</th>
                         <th>Operator</th>
-                        <th>Angka Kedua</th>
-                        <th>Hasil</th>
+                        <th>Second Number</th>
+                        <th>Result</th>
                     </tr>
                 </thead>
                 <tbody id="historylist"></tbody>
