--- a/calc/index.htm
+++ b/calc/index.htm
@@ -48,11 +48,11 @@
                         <th>Result</th>
                     </tr>
                 </thead>
-                <tbody id="historylist"></tbody>
+                <tbody id="historyList"></tbody>
             </table>
         </div>
 
-        <script src="assets/storage.js"></script>
         <script src="assets/calc.js"></script>
+        <script src="assets/storage.js"></script>
     </body>
 </html>
