udah jadi yeyeye

--- a/submission/index.htm
+++ b/submission/index.htm
@@ -2,7 +2,6 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Home | Berwisata Banyumas</title>
@@ -110,7 +109,39 @@
                         <h2>Profil</h2>
                     </header>
                     <section>
-                        <img src="assets/dwichan.jpg">
+                        <div class="my-identity">
+                            <div class="photo">
+                                <img src="assets/dwichan.jpg">
+                            </div>
+                            <div class="name-email">
+                                <h3>Dwi Candra Permana</h3>
+                                <p class="email">dwichan@outlook.com</p>
+                            </div>
+                        </div>
+                        <ul>
+                            <li class="role">Android</li>
+                            <li class="role">PHP</li>
+                            <li class="role">Java</li>
+                            <li class="role">Kotlin</li>
+                            <li class="role">SQL</li>
+                            <li class="role">C#</li>
+                        </ul>
+                        <div class="description">
+                            <table>
+                                <tr>
+                                    <th>Alamat</th>
+                                    <td>Jl. Mandor Martinem Roy 1 No. 99, Rejasari, Langensari, Kota Banjar, Jawa Barat</td>
+                                </tr>
+                                <tr>
+                                    <th>Telepon</th>
+                                    <td>0821-2182-4775</td>
+                                </tr>
+                                <tr>
+                                    <th>Pekerjaan</th>
+                                    <td>Mahasiswa di Universitas Amikom Purwokerto</td>
+                                </tr>
+                            </table>
+                        </div>
                     </section>
                 </article>
             </aside>
@@ -119,6 +150,6 @@
             <p>&copy; 2021. Created by <a href="http://www.dicoding.com/users/dwichan0905">Dwi Candra Permana</a>.</p>
         </footer>
 
-        <script src="assets/collapsible.js" />
+        <script src="assets/collapsible.js"></script>
     </body>
 </html>
