--- a/submission/index.htm
+++ b/submission/index.htm
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Home | Berwisata Banyumas</title>
-        <link rel="shortcut icon" href="assets/banyumas-logo.png" type="image/x-icon">
-        <link rel="stylesheet" href="assets/styles.css">
+        <link rel="shortcut icon" href="assets/images/banyumas-logo.png" type="image/x-icon">
+        <link rel="stylesheet" href="assets/css/styles.css">
     </head>
 
     <body>
@@ -14,7 +14,7 @@
             <nav>
                 <div class="nav-left">
                     <a href="#">
-                        <img src="assets/banyumas-logo.png" alt="Banyumas Logo">
+                        <img src="assets/images/banyumas-logo.png" alt="Banyumas Logo">
                         <h3>Berwisata<br>Banyumas</h3>
                     </a>
                 </div>
@@ -41,7 +41,7 @@
                         <p>Diposting oleh admin pada 19 Januari 2021</p>
                     </header>
                     <section>
-                        <img src="assets/Lokawisata-Baturraden.jpg" alt="Image Credit: Travelspromo.com">
+                        <img src="assets/images/Lokawisata-Baturraden.jpg" alt="Image Credit: Travelspromo.com">
                         <p>Objek wisata populer satu ini menjadi pilihan yang paling menarik karena mengemas lebih dari satu konsep liburan dalam satu area. Para pengunjung dipuaskan dalam satu tempat, sehingga tempat wisata satu ini meraih banyak pengunjung. Anda dapat menikmati udara segar yang masih sangat alami dari pepohonan di sekitar tempat wisata. Dengan begitu, tempat satu ini bisa dijadikan sebagai pelepas penat dan menyegarkan pikiran anda.</p>
                         <p>Kawasan wisata satu ini dirancang dengan berbagai unsur tambahan yang membuatnya semakin menarik. Para wisatawan dapat menikmati area taman, pemandian, kolam renang yang besar, wahana air yang menyenangkan, dan beberapa spot lain. Yang tidak kalah menarik, yaitu jembatan hits yang mampu menarik perhatian banyak orang. Di era digital ini, tentu disediakan spot foto populer yang beragam dan tentu saja instagrammable.</p>
                         <p><b>Lokasi:</b> Karangmangu, Kec. Baturaden, Kab. Banyumas.</p>
@@ -53,7 +53,7 @@
                         <p>Diposting oleh admin pada 19 Januari 2021</p>
                     </header>
                     <section>
-                        <img src="assets/The-Village-Baturraden.jpg" alt="Image Credit: Explorewisata.com">
+                        <img src="assets/images/The-Village-Baturraden.jpg" alt="Image Credit: Explorewisata.com">
                         <p>Masih berada di kawasan yang sama, destinasi wisata ini memiliki konsep yang cukup beda daripada lainnya. Tempat berlibur satu ini sangat cocok untuk keluarga, terutama bagi yang telah memiliki anak. Saat ini, permainan yang ramah anak sangat kurang sehingga banyak anak yang memainkan permainan berbahaya atau tidak sesuai dengan usianya. Akan tetapi, tempat ini memiliki permainan ramah anak yang sangat aman untuk buah hati anda.</p>
                         <p>Wisata keluarga yang tergolong baru ini cukup digandrungi karena juga bisa dikunjungi bersama teman. Banyak spot foto menarik yang bisa dijadikan latar untuk menambah koleksi foto di galeri. Anda bisa memilih berlibur ke The Village karena udara segar di sekitar destinasi yang sangat menenangkan. Selain itu, tersedia pula wahana air seperti perahu atau bebek untuk dimainkan bersama partner liburan Anda sembari menyusuri sungai kecil.</p>
                         <p><b>Lokasi:</b> Rempoah, Kec. Baturaden, Kab. Banyumas.</p>
@@ -65,7 +65,7 @@
                         <p>Diposting oleh admin pada 19 Januari 2021</p>
                     </header>
                     <section>
-                        <img src="assets/Air-Terjun-Curug-Jenggala.jpg" alt="Image Credit: Pegipegi.com">
+                        <img src="assets/images/Air-Terjun-Curug-Jenggala.jpg" alt="Image Credit: Pegipegi.com">
                         <p>Sekilas tampak seperti air terjun pada umumnya, tetapi sederet pemandangan menarik telah disuguhkan untuk Anda. Air terjun ini memiliki empat air yang jatuh ke bawah dengan sumber air cukup deras. Yang membuat destinasi ini menarik, yaitu lanskap pemandangan eksotis antara air terjun, pepohonan di sekitar, dan spot foto ikonik di depannya. Anda bisa berfoto dengan kekasih atau pasangan di tanda hati yang ada di depan air terjun.</p>
                         <p>Tidak hanya itu, Anda juga dapat menikmati air terjun yang sangat segar ini dengan bermain air di bawah guyurannya. Daya tarik lainnya, yaitu air yang jatuh selalu jernih dan bening tanpa ada kotoran yang turut turun karena kebersihan lingkungan terjaga dengan baik. untuk menikmati pemandangan sekitar, Anda bisa melihatnya melalui ketinggian yaitu gardu pandang di atas bukit. Dengan begitu, tidak ada pemandangan yang terpotong oleh suatu hal.</p>
                         <p><b>Lokasi:</b> Ketenger, Kec. Baturaden, Kab. Banyumas.</p>
@@ -111,7 +111,7 @@
                     <section>
                         <div class="my-identity">
                             <div class="photo">
-                                <img src="assets/dwichan.jpg">
+                                <img src="assets/images/dwichan.jpg">
                             </div>
                             <div class="name-email">
                                 <h3>Dwi Candra Permana</h3>
@@ -150,6 +150,6 @@
             <p>&copy; 2021. Created by <a href="http://www.dicoding.com/users/dwichan0905">Dwi Candra Permana</a>.</p>
         </footer>
 
-        <script src="assets/collapsible.js"></script>
+        <script src="assets/js/collapsible.js"></script>
     </body>
 </html>
